--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ projectsegura/modelo/migrations/__pycache__/0001_initial.cpython-39.pyc
 projectsegura/projectsegura/__pycache__/settings.cpython-39.pyc
 projectsegura/projectsegura/__pycache__/urls.cpython-39.pyc
 projectsegura/projectsegura/__pycache__/wsgi.cpython-39.pyc
+projectsegura/projectsegura/__pycache__/views.cpython-39.pyc
