--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,20 @@ projectsegura/projectsegura/__pycache__/settings.cpython-39.pyc
 projectsegura/projectsegura/__pycache__/urls.cpython-39.pyc
 projectsegura/projectsegura/__pycache__/wsgi.cpython-39.pyc
 projectsegura/projectsegura/__pycache__/views.cpython-39.pyc
+projectsegura/modelo/__pycache__/__init__.cpython-38.pyc
+projectsegura/modelo/__pycache__/__init__.cpython-38.pyc
+projectsegura/modelo/__pycache__/__init__.cpython-38.pyc
+projectsegura/modelo/__pycache__/__init__.cpython-38.pyc
+projectsegura/modelo/__pycache__/__init__.cpython-38.pyc
+projectsegura/modelo/__pycache__/admin.cpython-38.pyc
+projectsegura/modelo/__pycache__/__init__.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/wsgi.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/views.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/urls.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/settings.cpython-38.pyc
+projectsegura/modelo/migrations/__pycache__/__init__.cpython-38.pyc
+projectsegura/modelo/migrations/__pycache__/0001_initial.cpython-38.pyc
+projectsegura/modelo/__pycache__/apps.cpython-38.pyc
+projectsegura/modelo/__pycache__/__init__.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/settings.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/urls.cpython-38.pyc
