--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ projectsegura/modelo/migrations/__pycache__/0002_intentos_por_ip.cpython-39.pyc
 projectsegura/modelo/migrations/__pycache__/0003_rename_ultima_paticion_intentos_por_ip_ultima_peticion.cpython-39.pyc
 projectsegura/modelo/migrations/0002_intentos_por_ip.py
 projectsegura/modelo/migrations/0003_rename_ultima_paticion_intentos_por_ip_ultima_peticion.py
+projectsegura/projectsegura/__pycache__/settings.cpython-38.pyc
