--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ projectsegura/modelo/migrations/0003_rename_ultima_paticion_intentos_por_ip_ulti
 projectsegura/projectsegura/__pycache__/settings.cpython-38.pyc
 projectsegura/modelo/migrations/__pycache__/0004_auto_20210617_1611.cpython-39.pyc
 projectsegura/modelo/migrations/0004_auto_20210617_1611.py
+projectsegura/projectsegura/__pycache__/decoradores.cpython-39.pyc
