--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ projectsegura/modelo/migrations/0005_alter_usuarios_contra.py
 projectsegura/modelo/migrations/0006_alter_usuarios_contra.py
 projectsegura/modelo/migrations/0007_auto_20210622_0139.py
 projectsegura/modelo/migrations/0008_remove_usuarios_key.py
+projectsegura/modelo/migrations/__pycache__/0009_credenciales.cpython-39.pyc
+.gitignore
+projectsegura/modelo/migrations/0009_credenciales.py
