--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ projectsegura/modelo/migrations/__pycache__/0010_auto_20210630_1506.cpython-39.p
 projectsegura/modelo/migrations/0010_auto_20210630_1506.py
 projectsegura/modelo/migrations/__pycache__/0011_alter_credenciales_detalles.cpython-39.pyc
 projectsegura/modelo/migrations/0011_alter_credenciales_detalles.py
+
+projectsegura/projectsegura/templates/editarcredencial.html~
+
+*.html~
