--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,33 @@ projectsegura/modelo/migrations/0011_alter_credenciales_detalles.py
 projectsegura/projectsegura/templates/editarcredencial.html~
 
 *.html~
+projectsegura/modelo/__pycache__/__init__.cpython-38.pyc
+projectsegura/modelo/__pycache__/admin.cpython-38.pyc
+projectsegura/modelo/__pycache__/models.cpython-38.pyc
+projectsegura/modelo/migrations/__pycache__/0002_intentos_por_ip.cpython-38.pyc
+projectsegura/modelo/migrations/__pycache__/0003_rename_ultima_paticion_intentos_por_ip_ultima_peticion.cpython-38.pyc
+projectsegura/modelo/migrations/__pycache__/0004_auto_20210617_1611.cpython-38.pyc
+projectsegura/modelo/migrations/__pycache__/0005_alter_usuarios_contra.cpython-38.pyc
+projectsegura/modelo/migrations/__pycache__/0006_alter_usuarios_contra.cpython-38.pyc
+projectsegura/modelo/migrations/__pycache__/0007_auto_20210622_0139.cpython-38.pyc
+projectsegura/modelo/migrations/__pycache__/0008_remove_usuarios_key.cpython-38.pyc
+projectsegura/modelo/migrations/__pycache__/0009_credenciales.cpython-38.pyc
+projectsegura/modelo/migrations/__pycache__/0010_auto_20210630_1506.cpython-38.pyc
+projectsegura/modelo/migrations/__pycache__/0011_alter_credenciales_detalles.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/cifradoSimetrico.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/decoradores.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/passHash.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/settings.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/urls.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/settings.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/urls.cpython-38.pyc
+projectsegura/modelo/__pycache__/__init__.cpython-38.pyc
+projectsegura/modelo/__pycache__/admin.cpython-38.pyc
+projectsegura/modelo/__pycache__/models.cpython-38.pyc
+projectsegura/modelo/__pycache__/__init__.cpython-38.pyc
+projectsegura/modelo/__pycache__/__init__.cpython-38.pyc
+projectsegura/modelo/__pycache__/admin.cpython-38.pyc
+projectsegura/modelo/__pycache__/models.cpython-38.pyc
+
+projectsegura/projectsegura/__pycache__/settings.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/urls.cpython-38.pyc
