--- a/.gitignore
+++ b/.gitignore
@@ -5082,3 +5082,4 @@ projectsegura/.scannerwork/css-bundle/node_modules/resolve-from/license
 projectsegura/.scannerwork/css-bundle/node_modules/resolve-from/package.json
 projectsegura/.scannerwork/css-bundle/node_modules/resolve-from/readme.md
 projectsegura/projectsegura/__pycache__/settings.cpython-38.pyc
+projectsegura/projectsegura/__pycache__/settings.cpython-38.pyc
